--- a/web/package.json
+++ b/web/package.json
@@ -5,10 +5,11 @@
   "main": "app.js",
   "dependencies": {
     "circleci": "^0.3.3",
+    "express": "^4.16.4",
     "jest": "^23.6.0",
     "supertest": "^3.3.0",
-    "webpack-cli": "^3.1.2",
-    "webpack": "^4.21.0"
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {},
   "scripts": {
