--- a/web/package.json
+++ b/web/package.json
@@ -4,16 +4,34 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
+    "elasticsearch": "^15.0.0",
+    "express": "^4.16.3",
+    "npm": "^6.0.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.4.0",
+    "react-onclickoutside": "^6.7.1",
+    "react-rangeslider": "^2.2.0",
+    "request": "^2.88.0"
+  },
+  "devDependencies": {
     "circleci": "^0.3.3",
-    "express": "^4.16.4",
     "jest": "^23.6.0",
     "supertest": "^3.3.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node app",
+    "build": "node_modules/.bin/webpack -p",
+    "build:prod": "webpack -p"
   },
   "repository": {
     "type": "git",
